# flunkyballwm-stats

./: Cargo.toml  README.md
src/: calculation.rs  data.rs  fake_game.rs  hamburg24.rs  main.rs  team_player_data.rs  test_stuff.rs  util.rs  wm24.rs  wm25.rs  wm26.rs
src/calc/: accuracy_after_running_calc.rs  accuracy_after_running_data.rs  accuracy_calc.rs  accuracy_data.rs  beer_impact_accuracy_calc.rs  beer_impact_accuracy_data.rs  calculation.rs  chain_calc.rs  chain_data.rs  drink_avg_data.rs  drink_calc.rs  drink_finished_data.rs  drink_total_data.rs  first_throw_calc.rs  first_throw_data.rs  mod.rs  penalties_calc.rs  penalties_data.rs  ppg_calc.rs  ppg_data.rs  rock_paper_scissors_calc.rs  rock_paper_scissors_data.rs  running_calc.rs  running_data.rs  side_information_calc.rs  side_information_data.rs  strafschluck_calc.rs  strafschluck_data.rs  throw_per_game_calc.rs  throw_per_game_data.rs
