[package]
name = "flunkyballwm_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0-alpha.1", features = [] }
float-cmp = "0.9.0"
csv = "1.4.0"
serde = { version = "1.0", features = ["derive"]}
chrono = "0.4.44"
approx = "0.5.1"